// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`husky snapshot 1`] = `
"#~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
npx lint-staged"
`;

exports[`husky snapshot 2`] = `
"#~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
npx --no -- commitlint --edit \\"$1\\""
`;
